--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 body{
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     font-family: 'Montserrat';
+    max-width: 500px;
 }
