--- a/main.css
+++ b/main.css
@@ -3,5 +3,28 @@ body{
     margin: 0 auto;
     padding: 0;
     font-family: 'Montserrat';
-    max-width: 500px;
+}
+nav{
+    background-color: brown;
+}
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.navbar h3{
+    font-size: 30px;
+    font-weight: 700;
+    color: #fff;
+}
+.navbar ul{
+    display: flex;
+    list-style-type: none;
+    gap: 20px;
+}
+.list-items a{
+    color: #fff;
+    text-decoration: none;
 }
